--- a/projects/with-ngrx/package.json
+++ b/projects/with-ngrx/package.json
@@ -43,7 +43,8 @@
     "rxjs": "6.5.4",
     "safe-pipe": "0.3.0",
     "tslib": "1.11.1",
-    "zone.js": "0.10.3"
+    "zone.js": "0.10.3",
+    "angular-in-memory-web-api": "0.10.0"
   },
   "devDependencies": {
     "@angular-builders/jest": "9.0.0",
