feat(spa): added header component

--- a/projects/with-ngrx/angular.json
+++ b/projects/with-ngrx/angular.json
@@ -24,7 +24,10 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets", "src/appsettings.json"],
             "styles": ["src/styles.scss"],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": ["./src/assets/scss"]
+            }
           },
           "configurations": {
             "production": {
