--- a/projects/with-ngrx/angular.json
+++ b/projects/with-ngrx/angular.json
@@ -15,7 +15,7 @@
       },
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
             "outputPath": "dist/questions-manager",
             "index": "src/index.html",
@@ -23,10 +23,10 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets", "src/appsettings.json"],
-            "styles": ["src/styles.scss", "src/assets/scss/import.scss"],
+            "styles": ["src/styles.scss"],
             "scripts": [],
-            "stylePreprocessorOptions": {
-              "includePaths": ["./src/assets/scss"]
+            "customWebpackConfig": {
+              "path": "./webpack.config.js"
             }
           },
           "configurations": {
@@ -62,9 +62,12 @@
           }
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
-            "browserTarget": "questions-manager:build"
+            "browserTarget": "questions-manager:build",
+            "customWebpackConfig": {
+              "path": "./webpack.config.js"
+            }
           },
           "configurations": {
             "production": {
