--- a/projects/with-ngrx/package.json
+++ b/projects/with-ngrx/package.json
@@ -20,7 +20,7 @@
     "format:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
     "lint": "ng lint && npm run lint:styles",
     "lint:styles:check": "stylelint-config-prettier-check",
-    "lint:styles": "stylelint \"src/app/**/*.scss\"",
+    "lint:styles": "stylelint \"src/**/*.scss\"",
     "lint:ts:check": "tslint-config-prettier-check ./tslint.json",
     "e2e": "ng e2e",
     "compodoc": "./node_modules/.bin/compodoc -p ./tsconfig.json -d ./dist/docs --includes ./docs"
@@ -47,36 +47,41 @@
     "angular-in-memory-web-api": "0.10.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^9.0.0",
     "@angular-builders/jest": "9.0.0",
     "@angular-devkit/build-angular": "0.900.6",
     "@angular/cli": "9.0.6",
     "@angular/compiler-cli": "9.0.6",
     "@angular/language-service": "9.0.6",
+    "@commitlint/cli": "8.2.0",
+    "@commitlint/config-conventional": "8.2.0",
+    "@compodoc/compodoc": "1.1.11",
     "@ngneat/spectator": "5.3.1",
     "@types/jasmine": "3.5.9",
     "@types/jasminewd2": "2.0.8",
     "@types/jest": "25.1.4",
     "codelyzer": "5.2.1",
+    "commitizen": "4.0.3",
+    "commitlint-config-cz": "0.13.0",
+    "cz-customizable": "6.2.0",
     "husky": "4.2.3",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
     "jest": "25.1.0",
     "jest-junit": "10.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-scss": "^2.1.1",
     "prettier": "1.19.1",
     "pretty-quick": "2.0.1",
     "protractor": "5.4.3",
     "stylelint": "13.2.1",
     "stylelint-config-prettier": "8.0.1",
-    "tslint-config-prettier": "1.18.0",
+    "tailwindcss": "^1.5.2",
     "ts-node": "8.6.2",
     "tslint": "6.1.0",
-    "typescript": "3.7.5",
-    "@compodoc/compodoc": "1.1.11",
-    "commitizen": "4.0.3",
-    "@commitlint/cli": "8.2.0",
-    "@commitlint/config-conventional": "8.2.0",
-    "commitlint-config-cz": "0.13.0",
-    "cz-customizable": "6.2.0"
+    "tslint-config-prettier": "1.18.0",
+    "typescript": "3.7.5"
   },
   "config": {
     "commitizen": {
